--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
         <p>I am Jorge, a passionate data analyst and tennis enthusiast. With a background in Mathematics and a Master's in Big Data Analytics, I have combined my experience as a tennis coach and player with statistical analysis to optimize performance and make data-driven decisions in sports.</p>
         <p>📧 Email: jorge.moralf@gmail.com</p>
         <p>🔗 LinkedIn: <a href="https://linkedin.com/in/jorge-moral-b043bb285" target="_blank">linkedin.com/in/jorge-moral</a></p>
-        <p>💻 GitHub: github.com/JorgeMoralFdez</p>
+        <p>💻 GitHub: https://jorgemoralfer.github.io/</p>
         <p>📍 Location: Madrid, Spain</p>
     </div>
 
