--- a/index.html
+++ b/index.html
@@ -833,6 +833,19 @@
     </div>
 </div>
 
+<footer>
+    <nav>
+        <ul>
+            <li><a href="javascript:void(0);" onclick="showSection('about')">About Me</a></li>
+            <li><a href="javascript:void(0);" onclick="showSection('experience')">Experience</a></li>
+            <li><a href="javascript:void(0);" onclick="showSection('education')">Education</a></li>
+            <li><a href="javascript:void(0);" onclick="showSection('skills')">Skills</a></li>
+            <li><a href="javascript:void(0);" onclick="showSection('projects')">Projects</a></li>
+            <li><a href="javascript:void(0);" onclick="showSection('tennis')">Tennis</a></li>
+        </ul>
+    </nav>
+</footer>
+
 
 
 <script>
